fixed two typos.

--- a/03-te/te.tex
+++ b/03-te/te.tex
@@ -5,7 +5,7 @@
 \onehalfspacing
 
 \newif\ifeqns
-%\eqnstrue
+\eqnstrue
 
 \usepackage[hang,flushmargin]{footmisc} 
 % 'hang' flushes the footnote marker to the left,  'flushmargin'  flushes the text as well.
@@ -403,7 +403,7 @@ This is equivalent to specifying the incoming partial current, $$\vec{j}^-(\vec{
 \vspace*{3em}
 \fi
 
-\item \underline{Finiteness Condition}: to by physically valid we need to meet the condition \\$0 < \psi(\vec{r}, E, \vOmega, t) < \infty$, with the possible exception of point sources\dots
+\item \underline{Finiteness Condition}: to by physically valid we need to meet the condition \\$0 \leq \psi(\vec{r}, E, \vOmega, t) < \infty$, with the possible exception of point sources\dots
 
 \item which we handle with the \underline{Source Condition}: localized sources are introduced as mathematical singularities at the location of the source.
 
