--- a/04-de/de.tex
+++ b/04-de/de.tex
@@ -302,7 +302,7 @@ Use the polynomials as follows and begin writing out terms of the expansion:
 &l=0 \text{ is isotropic; (note } P_0 (\vOmega) = 1 \text{)}\\
 &\qquad \Sigma_s(\vOmega' \cdot \vOmega) \cong \frac{1}{4\pi}\Sigma_{s0} \\
 %
-&l=1 \text{ is linearly isotropic; (note } P_1 (\vOmega) = \vOmega \text{)}\\
+&l=1 \text{ is linearly anisotropic; (note } P_1 (\vOmega) = \vOmega \text{)}\\
 &\qquad \Sigma_s(\vOmega' \cdot \vOmega) \cong \frac{1}{4\pi}\bigl( \Sigma_{s0} + 3\vOmega' \vOmega \Sigma_{s1} \bigr) 
 \end{align*}
 
