fixed typos and awk phrasing

--- a/02-fission/fission.tex
+++ b/02-fission/fission.tex
@@ -2,7 +2,7 @@
 \usepackage[top=1in, bottom=1in, left=1in, right=1in]{geometry}
 
 \newif\ifeqns
-%\eqnstrue
+\eqnstrue
 
 \usepackage{setspace}
 \onehalfspacing
@@ -58,7 +58,7 @@ August 25, 2017}
 %---------------------------------------------------------------------------
 \section*{Fission}
 
-The main goal of nuclear reactor theory is the utilization of the energy released by a controlled chain reaction of nuclear fission events. An example of fission reaction:
+The main goal of nuclear reactor theory is the utilization of the energy released by a controlled chain reaction of nuclear fission events. An example fission reaction:
  \[
  n+^{235}\text{U} \rightarrow \text{fission products + more neutrons +} \approx 200MeV
 \]
@@ -90,9 +90,9 @@ The maximum binding energy per nucleon occurs at around mass number A = 50, and 
 \end{center}
 
 
-\textit{Fissile isotopes} are those that can fission from a neutron with low (in theory, zero) kinetic energy: $^{233}$U, $^{235}$U, $^{239}$Pu, and $^{241}$Pu. [It is relevant to mention thermal neutrons, with very small kinetic energies.] Fissile nuclides represent the principal fuels used in fission chain-reaction systems. 
+\textit{Fissile isotopes} are those that can fission from a neutron with low (in theory, zero) kinetic energy: $^{233}$U, $^{235}$U, $^{239}$Pu, and $^{241}$Pu. [It is relevant to mention thermal neutrons, with very small kinetic energies.] Fissile nuclides represent the principle fuels used in fission chain-reaction systems. 
 
-\textit{Fissionable isotopes} can undergo fission from high-energy neutrons; their critical energies are higher than those of fissile isotopes: $^{232}$Th, $^{238}$U, $^{240}$Pu. Fissionable nuclides are unable to sustain by themselves a stable fission reaction.
+\textit{Fissionable isotopes} can undergo fission from high-energy neutrons; their critical energies are higher than those of fissile isotopes: $^{232}$Th, $^{238}$U, $^{240}$Pu. Fissionable nuclides are unable to sustain a stable fission reaction by themselves.
 
 \textit{Fertile isotopes} are those that create fissile isotopes upon neutron capture. Two examples:
 \ifeqns
@@ -103,7 +103,7 @@ $^{232}\text{Th}+n \stackrel{\gamma}{\rightarrow} \,^{233}\text{Th}\stackrel{\be
 \vspace*{3 em}
 \fi
 
-Each fission of a parent atom produces a different set of fission product atoms, which also varies according to the energy of neutron inducing fission -- see \autoref{fig:fp-e} and \autoref{fig:fp-i}. However, while an individual fission is not predictable, the fission products are statistically predictable. The amount of any particular isotope produced per fission is called its yield, typically expressed as percent per parent fission.
+Each fission of a parent atom produces a different set of fission product atoms, which also vary according to the energy of neutron inducing fission -- see \autoref{fig:fp-e} and \autoref{fig:fp-i}. However, while an individual fission is not predictable, the fission products are statistically predictable. The amount of any particular isotope produced per fission is called its yield, typically expressed as percent per parent fission.
 
 \begin{figure}
 \centering
