--- a/03-te/diff-vol-te.tex
+++ b/03-te/diff-vol-te.tex
@@ -66,7 +66,7 @@ Spatial logistics
 \begin{itemize}
 \item $d\vec{r} = d^3r$ = ordinary volume = $r^2 \sin(\theta) d\theta d\varphi dr$
 %
-\item $v$ = speed (scaler)
+\item $v$ = speed (scalar)
 \item $\vec{v}$ = velocity (vector)
 \item $d\vec{v} = d^3v$ = velocity volume = $v^2 \sin(\theta')d\theta' d\varphi' dr$
 \item $v = \sqrt{(2E)/m}$ where $m$ is the rest mass of the particle. Thus, we can relate energy and speed.
