--- a/01-intro/intro.tex
+++ b/01-intro/intro.tex
@@ -5,7 +5,7 @@
 \onehalfspacing
 
 \newif\ifeqns
-%\eqnstrue
+\eqnstrue
 
 \usepackage{amssymb}
 %% The amsthm package provides extended theorem environments
