--- a/04-de/de.tex
+++ b/04-de/de.tex
@@ -5,7 +5,7 @@
 \onehalfspacing
 
 \newif\ifeqns
-%\eqnstrue
+\eqnstrue
 
 \usepackage[hang,flushmargin]{footmisc} 
 % 'hang' flushes the footnote marker to the left,  'flushmargin'  flushes the text as well.
