changed reproduction factor to be general for all materials

--- a/02-fission/fission.tex
+++ b/02-fission/fission.tex
@@ -133,7 +133,7 @@ $\nu$, the average number of neutrons per fission. See \autoref{fig:nu} for exam
 
 $\alpha = \frac{\sigma_\gamma}{\sigma_f}$ is the capture-to-fission ratio
 
-$\eta = \frac{\nu \sigma_f}{\sigma_a}$ is the average number of neutrons produced per neutron absorbed. For a single fissile isotope we can write $\eta = \frac{\nu}{1+\alpha}$
+$\eta = \frac{\nu \Sigma_f}{\Sigma_a}$ is the average number of neutrons produced per neutron absorbed. For a single fissile isotope, the number density in both the fission and absorption macroscopic cross sections are the same ($\Sigma_f = n\sigma_f$ and $\Sigma_a = n\sigma_a$), and so we can write $\eta = \frac{\nu \sigma_f}{\sigma_a} = \frac{\nu}{1+\alpha}.$
 
 conversion ratio = $\frac{\text{fissile produced}}{\text{fissile consumed}}$
 
